syntax = "proto3";

package user.messages;

option go_package = "github.com/Yux77Yux/platform_backend/generated/user";

import "common/user_default.proto";
import "user/messages/user_role.proto";

message UserLogin{
    common.UserDefault user_default = 1;
    string user_avator = 2;
    user.messages.UserRole user_role = 3;
}
